// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/dart getReleases processes real data 1`] = `
Object {
  "homepage": "https://github.com/flutter/plugins/tree/master/packages/shared_preferences",
  "releases": Array [
    Object {
      "version": "0.1.1",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.0+1",
    },
    Object {
      "version": "0.2.3",
    },
    Object {
      "version": "0.2.4",
    },
    Object {
      "version": "0.2.4+1",
    },
    Object {
      "version": "0.2.5",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.3.1",
    },
    Object {
      "version": "0.3.2",
    },
    Object {
      "version": "0.3.3",
    },
    Object {
      "version": "0.4.0",
    },
    Object {
      "version": "0.4.1",
    },
    Object {
      "version": "0.4.2",
    },
    Object {
      "version": "0.4.3",
    },
    Object {
      "version": "0.5.0",
    },
    Object {
      "version": "0.5.1+1",
    },
  ],
  "sourceUrl": "http://example.com",
}
`;

exports[`datasource/dart getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/shared_preferences",
  },
]
`;

exports[`datasource/dart getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/shared_preferences",
  },
]
`;

exports[`datasource/dart getReleases returns null for empty fields 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/shared_preferences",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/shared_preferences",
  },
]
`;

exports[`datasource/dart getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/non_sense",
  },
]
`;

exports[`datasource/dart getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/shared_preferences",
  },
]
`;

exports[`datasource/dart getReleases throws for 5xx 1`] = `[Error: registry-failure]`;

exports[`datasource/dart getReleases throws for 5xx 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate",
      "host": "pub.dartlang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pub.dartlang.org/api/packages/shared_preferences",
  },
]
`;
